sdk/sdk_2014.4/.metadata/.plugins/org.eclipse.cdt.ui/stereo_pair.build.log
12:15:10 **** Auto Build of configuration Debug for project stereo_pair ****
make all 
'Building file: C:/Users/cag01/Documents/mdh/vhdl/gimme2a/sdk_2014.2/src/vasa_udp_client.c'
'Invoking: ARM Linux gcc compiler'
arm-xilinx-linux-gnueabi-gcc -Wall -O0 -g3 -I"C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src" -c -fmessage-length=0 -MT"src_shared/vasa_udp_client.o" -MMD -MP -MF"src_shared/vasa_udp_client.d" -MT"src_shared/vasa_udp_client.d" -o "src_shared/vasa_udp_client.o" "C:/Users/cag01/Documents/mdh/vhdl/gimme2a/sdk_2014.2/src/vasa_udp_client.c"
'Finished building: C:/Users/cag01/Documents/mdh/vhdl/gimme2a/sdk_2014.2/src/vasa_udp_client.c'
' '
'Building file: ../src/stereo_pair.c'
'Invoking: ARM Linux gcc compiler'
arm-xilinx-linux-gnueabi-gcc -Wall -O0 -g3 -I"C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src" -c -fmessage-length=0 -MT"src/stereo_pair.o" -MMD -MP -MF"src/stereo_pair.d" -MT"src/stereo_pair.d" -o "src/stereo_pair.o" "../src/stereo_pair.c"
../src/stereo_pair.c: In function 'main':
../src/stereo_pair.c:87:2: error: too few arguments to function 'expreg_set_th'
  expreg_set_th(exp_th);
  ^
In file included from ../src/stereo_pair.c:37:0:
C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src/exposure_reg.h:24:5: note: declared here
 int expreg_set_th(uint8_t th, uint32_t base_addr, uint32_t high_addr);
     ^
../src/stereo_pair.c:125:2: error: too few arguments to function 'InitFB'
  InitFB(FB0_ADDR); //write DEADBEEFs
  ^
In file included from ../src/stereo_pair.c:32:0:
C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src/VDMA.h:30:6: note: declared here
 void InitFB(off_t FB_addr, uint16_t width, uint16_t height, uint16_t bpp);
      ^
../src/stereo_pair.c:126:2: error: too few arguments to function 'InitFB'
  InitFB(FB1_ADDR);
  ^
In file included from ../src/stereo_pair.c:32:0:
C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src/VDMA.h:30:6: note: declared here
 void InitFB(off_t FB_addr, uint16_t width, uint16_t height, uint16_t bpp);
      ^
../src/stereo_pair.c:129:2: warning: large integer implicitly truncated to unsigned type [-Woverflow]
  SetupVDMAs2mm(vdma_addr0,FB0_ADDR,FB0_ADDR,FB0_ADDR);
  ^
../src/stereo_pair.c:129:2: warning: large integer implicitly truncated to unsigned type [-Woverflow]
../src/stereo_pair.c:129:2: warning: large integer implicitly truncated to unsigned type [-Woverflow]
../src/stereo_pair.c:129:2: error: too few arguments to function 'SetupVDMAs2mm'
In file included from ../src/stereo_pair.c:32:0:
C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src/VDMA.h:45:6: note: declared here
 void SetupVDMAs2mm(uint32_t BaseAddress, uint16_t width, uint16_t height, uint16_t bpp, uint32_t frameAddress1, uint32_t frameAddress2, uint32_t frameAddress3);
      ^
../src/stereo_pair.c:131:2: warning: large integer implicitly truncated to unsigned type [-Woverflow]
  SetupVDMAs2mm(vdma_addr1,FB1_ADDR,FB1_ADDR,FB1_ADDR);
  ^
../src/stereo_pair.c:131:2: warning: large integer implicitly truncated to unsigned type [-Woverflow]
../src/stereo_pair.c:131:2: warning: large integer implicitly truncated to unsigned type [-Woverflow]
../src/stereo_pair.c:131:2: error: too few arguments to function 'SetupVDMAs2mm'
In file included from ../src/stereo_pair.c:32:0:
C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src/VDMA.h:45:6: note: declared here
 void SetupVDMAs2mm(uint32_t BaseAddress, uint16_t width, uint16_t height, uint16_t bpp, uint32_t frameAddress1, uint32_t frameAddress2, uint32_t frameAddress3);
      ^
../src/stereo_pair.c:158:4: error: too few arguments to function 'expreg_read'
    expreg_read(&exp_pos, &exp_neg);
    ^
In file included from ../src/stereo_pair.c:37:0:
C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src/exposure_reg.h:25:5: note: declared here
 int expreg_read(uint32_t *pos, uint32_t *neg, uint32_t base_addr, uint32_t high_addr);
     ^
../src/stereo_pair.c:166:4: error: too many arguments to function 'set_integration_time'
    set_integration_time(&it,&pin_data,&pin_dir, SIOD_0, SIOC_0, SIOD_1, SIOC_1);
    ^
In file included from ../src/stereo_pair.c:33:0:
C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src/axi_gpio.h:102:6: note: declared here
 void set_integration_time(integration_times_t *it, uint32_t *pin_data, uint32_t *pin_dir, uint32_t siod, uint32_t sioc);
      ^
../src/stereo_pair.c:184:4: warning: passing argument 1 of 'SendImage_mem' from incompatible pointer type [enabled by default]
    SendImage_mem(im1.data,0);
    ^
In file included from ../src/stereo_pair.c:32:0:
C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src/VDMA.h:33:5: note: expected 'struct image_t *' but argument is of type 'char *'
 int SendImage_mem(image_t* img, char id);
     ^
make: *** [src/stereo_pair.o] Fel 1

12:15:10 Build Finished (took 601ms)

